# webdev-books-demo

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .env.sample  .gitignore  Cargo.toml  Dockerfile  Dockerfile.migrate  README.md  rustfmt.toml
backend/migrations/: 20251011113427_init_database.sql  20251011145956_add_updated_at_triggers.sql  20251015044228_edit_books_column.sql  20251015101213_add_order_and_rating_table.sql  20251015161819_add_cart_table.sql  20251016140946_drop_trigger_decrease_book_available.sql  20251017024946_books_add_column.sql  20251110081935_edit_books_column.sql
backend/mockup/: book_details.json
backend/src/: lib.rs  main.rs
backend/src/models/: books.rs  cart_items.rs  images.rs  mod.rs  orders.rs  ratings.rs  users.rs
backend/src/repos/: mod.rs
backend/src/repos/in_mem/: books.rs  images.rs  mockup.rs  mod.rs  users.rs
backend/src/repos/postgres/: books.rs  cart_items.rs  images.rs  mod.rs  orders.rs  ratings.rs  users.rs
backend/src/routes/: app_error.rs  auth.rs  books.rs  cart_items.rs  images.rs  middleware.rs  mod.rs  orders.rs  ratings.rs  users.rs
backend/src/schemas/: admin.rs  book.rs  cart.rs  image.rs  mod.rs  order.rs  rating.rs  user.rs
backend/src/services/: jwt_token.rs  mod.rs  password_hashing.rs
backend/src/startup/: app_state.rs  cli.rs  config.rs  mod.rs  server.rs
backend/src/startup/command/: clean.rs  create_admin.rs  mockup_data.rs  mod.rs  seed.rs
backend/tests/unit/: mod.rs  user_test.rs
frontend/: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  Dockerfile.backup  README.md  nixpacks.toml  package.json  railway.toml  svelte.config.js
frontend/src/: app.css  app.html  hooks.server.ts
frontend/src/components/: BookCard.svelte  BookSearch.svelte  Footer.svelte  Nav.svelte
frontend/src/lib/: utils.ts
frontend/src/lib/api/: apiClient.ts  auth.ts  books.ts  cart.ts  index.ts  order.ts
frontend/src/lib/components/: Alert.svelte  Button.svelte  Input.svelte  Popup.svelte  Quantity.svelte  StatusBadge.svelte  index.ts
frontend/src/lib/data/: mockup_books.ts
frontend/src/lib/store/: app.svelte.ts  auth.svelte.ts  cart.svelte.ts  order.svelte.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.server.ts.backup  +page.svelte  +page.ts
(+61 files in other folders)
