[package]
name = "book-store"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
dotenvy = "0.15.7"
rust_decimal = { version = "1.38.0", features = ["macros", "serde-float"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }
