[package]
name = "book-store"
description = "Book-Store web server."
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.6", features = ["multipart"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.12.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
regex = "1.12.1"
rust_decimal = { version = "1.38.0", features = ["macros", "serde-float"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid", "rust_decimal"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tower-cookies = "0.11.0"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
rstest = "0.26.1"
